Adapt Qt-style cmake for manual tests
The tests can built with qt-cmake-standalone-test.
Make then directly openable in Creator.

Pick-to: 6.3 6.2
Change-Id: Iceae2305912d3854959b3a266d19d3e7344557e7
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/tests/manual/quick/touchbrowser/CMakeLists.txt
+++ b/tests/manual/quick/touchbrowser/CMakeLists.txt
@@ -1,39 +1,26 @@
-cmake_minimum_required(VERSION 3.16)
-project(touchbrowser LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(CMAKE_AUTOMOC ON)
-
-if(NOT DEFINED INSTALL_MANUAL_TESTSDIR)
-    set(INSTALL_MANUAL_TESTSDIR "manual")
+if (NOT QT_BUILD_STANDALONE_TESTS AND NOT QT_BUILDING_QT)
+    cmake_minimum_required(VERSION 3.16)
+    project(touchbrowser LANGUAGES CXX)
+    find_package(Qt6BuildInternals COMPONENTS STANDALONE_TEST)
 endif()
-
-set(INSTALL_MANUAL_TESTDIR "${INSTALL_MANUAL_TESTSDIR}/quick/touchbrowser")
 
 if(NOT CMAKE_CROSSCOMPILING)
     add_definitions(-DDESKTOP_BUILD)
     set(SOURCES "touchmockingapplication.cpp")
 endif()
 
-find_package(Qt6 REQUIRED COMPONENTS Quick WebEngineQuick Gui)
-
-qt_add_executable(touchbrowser
-    main.cpp
-    utils.h
-    ${SOURCES}
-)
-
-set_target_properties(touchbrowser PROPERTIES
-    WIN32_EXECUTABLE TRUE
-    MACOSX_BUNDLE TRUE
-)
-
-target_link_libraries(touchbrowser PRIVATE
-    Qt::GuiPrivate
-    Qt::Quick
-    Qt::WebEngineQuick
+qt_internal_add_manual_test(touchbrowser
+    GUI
+    SOURCES
+        main.cpp
+        utils.h
+        ${SOURCES}
+    PUBLIC_LIBRARIES
+        Qt::GuiPrivate
+        Qt::Quick
+        Qt::WebEngineQuick
+    ENABLE_AUTOGEN_TOOLS
+        moc
 )
 
 set(touchbrowser_resource_files
@@ -48,10 +35,4 @@ qt_add_resources(touchbrowser "touchbrowser"
     "/"
     FILES
     ${touchbrowser_resource_files}
-)
-
-install(TARGETS touchbrowser
-    RUNTIME DESTINATION "${INSTALL_MANUAL_TESTDIR}"
-    BUNDLE DESTINATION "${INSTALL_MANUAL_TESTDIR}"
-    LIBRARY DESTINATION "${INSTALL_MANUAL_TESTDIR}"
 )
