--- a/tests/manual/widgets/webgl/CMakeLists.txt
+++ b/tests/manual/widgets/webgl/CMakeLists.txt
@@ -1,36 +1,17 @@
-cmake_minimum_required(VERSION 3.16)
-project(webgl LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(CMAKE_AUTOMOC ON)
-
-if(NOT DEFINED INSTALL_MANUAL_TESTSDIR)
-    set(INSTALL_MANUAL_TESTSDIR "manual")
+if (NOT QT_BUILD_STANDALONE_TESTS AND NOT QT_BUILDING_QT)
+    cmake_minimum_required(VERSION 3.16)
+    project(webgl LANGUAGES CXX)
+    find_package(Qt6BuildInternals COMPONENTS STANDALONE_TEST)
 endif()
 
-set(INSTALL_MANUAL_TESTDIR "${INSTALL_MANUAL_TESTSDIR}/widgets/webgl")
-
-find_package(Qt6 REQUIRED COMPONENTS Core Gui WebEngineWidgets)
-
-qt_add_executable(webgl
-    main.cpp
-)
-
-set_target_properties(webgl PROPERTIES
-    WIN32_EXECUTABLE TRUE
-    MACOSX_BUNDLE TRUE
-)
-
-target_link_libraries(webgl PRIVATE
-    Qt::Core
-    Qt::Gui
-    Qt::WebEngineWidgets
-)
-
-install(TARGETS webgl
-    RUNTIME DESTINATION "${INSTALL_MANUAL_TESTDIR}"
-    BUNDLE DESTINATION "${INSTALL_MANUAL_TESTDIR}"
-    LIBRARY DESTINATION "${INSTALL_MANUAL_TESTDIR}"
+qt_internal_add_manual_test(webgl
+    GUI
+    SOURCES
+        main.cpp
+    PUBLIC_LIBRARIES
+        Qt::Core
+        Qt::Gui
+        Qt::WebEngineWidgets
+    ENABLE_AUTOGEN_TOOLS
+        moc
 )
