Fix printing/no-printing builds
If no 'printing' we should also disable 'cups' otherwise
it asserts in gn. Moreover we use cups on macos and linux only.

Pick-to: 6.3
Change-Id: Id0c9b34746204e985032d7c42868aeb8567b8e8f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -307,6 +307,10 @@ foreach(arch ${archs})
             CONDITION QT_FEATURE_webengine_printing_and_pdf
         )
         extend_gn_list(gnArgArg
+            ARGS use_cups
+            CONDITION QT_FEATURE_webengine_printing_and_pdf AND NOT WIN32
+        )
+        extend_gn_list(gnArgArg
             ARGS enable_plugins
             CONDITION QT_FEATURE_webengine_pepper_plugins
         )
