Create a RWHV delegate in core
This is adapting the Quick code for shared use with widgets,
and allows us to use it from QWebEnginePage.

Pick-to: 6.4
Fixes: QTBUG-96377
Change-Id: I3f09c1a949eff86d80fbe6c513dc66e3f9f2f611
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -160,6 +160,7 @@ foreach(arch ${archs})
                 render_widget_host_view_qt.cpp render_widget_host_view_qt.h
                 render_widget_host_view_qt_delegate.h
                 render_widget_host_view_qt_delegate_client.cpp render_widget_host_view_qt_delegate_client.h
+                render_widget_host_view_qt_delegate_item.cpp render_widget_host_view_qt_delegate_item.h
                 renderer/content_renderer_client_qt.cpp renderer/content_renderer_client_qt.h
                 renderer/content_settings_observer_qt.cpp renderer/content_settings_observer_qt.h
                 renderer/render_configuration.cpp renderer/render_configuration.h
