Examples: Use REQUIRED COMPONENTS where possible
This will result in a better error message if the components are not
available.

Pick-to: 6.3
Change-Id: Ib691643a9562981863eab5c27ce436814858e2e9
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/examples/webenginequick/customtouchhandle/CMakeLists.txt
+++ b/examples/webenginequick/customtouchhandle/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 
 set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/webenginequick/customtouchhandle")
 
-find_package(Qt6 COMPONENTS Core Gui WebEngineQuick)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui WebEngineQuick)
 
 qt_add_executable(customtouchhandle
     main.cpp
