Add QtWebChannel dependency to QtWebEngine
Missing parameter types from QtWebChannel.

Change-Id: Idc0807658384b4af455d5c84ac91db877cd0e70b
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/webenginequick/CMakeLists.txt
+++ b/src/webenginequick/CMakeLists.txt
@@ -6,6 +6,7 @@ qt_internal_add_qml_module(WebEngineQuick
     CLASS_NAME QtWebEnginePlugin
     DEPENDENCIES
         QtQuick/auto
+        QtWebChannel/auto
     PLUGIN_TARGET qtwebenginequickplugin
     NO_GENERATE_PLUGIN_SOURCE
     NO_PLUGIN_OPTIONAL
