Pass archiver to gn build
User can override with env variable AR archiver for
cross compilation, pass archiver from cmake for gn.

Fixes: QTBUG-103578
Pick-to: 6.3 6.2
Change-Id: I055d7403ecb829f4b1bbe57ec27c0bca7323484c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/gn/CMakeLists.txt
+++ b/src/gn/CMakeLists.txt
@@ -36,6 +36,7 @@ add_custom_command(
         --cc ${CMAKE_C_COMPILER}
         --cxx ${CMAKE_CXX_COMPILER}
         --ld ${CMAKE_CXX_COMPILER}
+        --ar ${CMAKE_AR}
         --qt-version "${QT_REPO_MODULE_VERSION}.qtwebengine.qt.io"
         $<$<PLATFORM_ID:Darwin>:--isysroot>
         $<$<PLATFORM_ID:Darwin>:${CMAKE_OSX_SYSROOT}>
