Fix top level build with no widget
It seems that condition module.widgets is not evaluated in time
when configured with "-no-widget" to be picked up by the webengine
when doing 'top level' build.
Use 'widget' feature instead.

Fixes: QTBUG-103618
Change-Id: I881e4ba899d376690984c4866336a03d7dae246c
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/src/pdfwidgets/configure.json
+++ b/src/pdfwidgets/configure.json
@@ -13,7 +13,7 @@
        "pdf-widgets": {
             "label": "Support Qt PDF Widgets",
             "purpose": "Provides Qt PDF Widgets support.",
-            "condition": "module.widgets",
+            "condition": "features.widgets",
             "output": [ "privateFeature" ]
         }
     },
