--- a/src/host/CMakeLists.txt
+++ b/src/host/CMakeLists.txt
@@ -16,7 +16,7 @@ project(QtWebEngineConfigure
     VERSION "${QT_REPO_MODULE_VERSION}"
     LANGUAGES CXX C)
 
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core)
+find_package(Qt6 6.2 CONFIG REQUIRED COMPONENTS BuildInternals Core)
 
 set(buildDir ${CMAKE_CURRENT_BINARY_DIR})
 configure_gn_toolchain(host ${TEST_architecture_arch} ${TEST_architecture_arch}
